<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:layout_marginStart="25dp"
        android:backgroundTint="#D6DDDD"
        app:cardCornerRadius="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_next_day"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/sunny"
                app:tint="#A39494" />

            <TextView
                android:id="@+id/text_next_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_next_day"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8sp"
                android:text="@string/first_day_mon_21"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/text_degree_next_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_next_day"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/first_day_35C"
                android:textSize="@dimen/dimens_firstDay" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="10dp"
                android:layout_height="25dp"
                android:layout_below="@+id/text_next_day"
                android:layout_toEndOf="@+id/text_degree_next_day"
                android:src="@drawable/ic_up" />

            <TextView
                android:id="@+id/text_degree_next_day_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_next_day"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_41sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/temp_max_firstDay"
                android:textSize="@dimen/dimens_temp_max_firstDay" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="10dp"
                android:layout_height="25dp"
                android:layout_below="@+id/text_next_day"
                android:layout_toEndOf="@+id/text_degree_next_day_up"
                android:src="@drawable/ic_down" />
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>